@@ -6,6 +6,8 @@
 * Fix - Make sure we always clear the subscription object from cache after updating dates.
 * Fix - Use block theme styles for the 'Add to Cart' button on subscription product pages.
 * Fix - Customer notes not being saved on the Edit Subscription page for stores with HPOS enabled.
+* Fix - Ensure products that have a yearly billing period can choose a date that the subscription is synchronized to.
+* Fix - Improved alignment of subscription product pricing fields on the edit product screen for consistency with other fields.
 * Fix - Avoid setting empty meta keys on subscriptions when changing the customer's default payment method.
 
 = 6.8.0 - 2024-02-08 =
